name:                Helm
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/carlosmaniero/Helm#readme
license:             BSD3
license-file:        LICENSE
author:              Carlos Maniero
maintainer:          carlosmaniero@gmail.com
category:            Control
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable Helm-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Helm
  default-language:    Haskell2010

test-suite Helm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , Helm
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/carlosmaniero/Helm
