name:                Hue
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/carlosmaniero/Hue#readme
license:             BSD3
license-file:        LICENSE
author:              Carlos Maniero
maintainer:          carlosmaniero@gmail.com
description:         Hue is a simple architecture elm-based for Haskell programs.
synopsis:            A Haskell architecte elm-based
category:            Control
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hue.Application
                     , Hue.Process
                     , Hue.Broadcast
  build-depends:       base >= 4.7 && < 5
                     , deepseq >= 1.3.0.0
                     , stm >= 2.4.4.1
  default-language:    Haskell2010

executable Hue-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Hue
  default-language:    Haskell2010

test-suite Hue-test-unit
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/Unit
  main-is:             HueSpec.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , hlint
                     , Hue
  other-modules:       ProcessIOSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Hue-test-integration
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/Integration
  main-is:             HueSpec.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , Hue
  other-modules:       ApplicationSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/carlosmaniero/Hue
