name:                Hue
version:             0.0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/carlosmaniero/Hue#readme
license:             BSD3
license-file:        LICENSE
author:              Carlos Maniero
maintainer:          carlosmaniero@gmail.com
copyright:           2017 Carlos Maniero
category:            Concurrency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hue.Iteration
                     , Hue.Context
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite Hue-unit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/unit
  main-is:             Spec.hs
  build-depends:       base
                     , Hue
                     , hspec
  other-modules:       HueIterationSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/carlosmaniero/Hue
